# cli

./: .editorconfig  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  clippy.toml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: open-chrome.applescript
assets/icons/: icon.icns
crates/execution-engine/: Cargo.toml  README.md
crates/execution-engine/python/: tp_plug.py  tp_worker.py
crates/execution-engine/src/: constants.rs  event_sink.rs  lib.rs  log.rs  manifest.rs  path_utils.rs  protocol.rs  transport.rs  unit.rs
crates/execution-engine/src/events/: mod.rs
crates/execution-engine/src/identify_unit/: components.rs  mod.rs  resolve.rs
crates/execution-engine/src/job/: mod.rs
crates/execution-engine/src/measurements/: evaluation.rs  mod.rs  types.rs
crates/execution-engine/src/monitoring/: mod.rs  resource_tracker.rs
crates/execution-engine/src/orchestrator/: events.rs  execution.rs  initialization.rs  jobs.rs  mod.rs  plugs.rs  scheduling.rs  stats.rs
crates/execution-engine/src/orchestrator/completion/: attachment_collector.rs  error_handling.rs  event_emitter.rs  handler.rs  mod.rs  next_action.rs  outcome_resolver.rs  tests.rs
crates/execution-engine/src/orchestrator/shutdown/: handler.rs  mod.rs
crates/execution-engine/src/plugs/: guard.rs  instance.rs  manager.rs  mod.rs  plug_service.rs  process.rs
crates/execution-engine/src/procedure/: error.rs  loader.rs  mod.rs  schema.rs
crates/execution-engine/src/python/: mod.rs
crates/execution-engine/src/reports/: mod.rs
crates/execution-engine/src/state/: mod.rs  worker_state.rs
crates/execution-engine/src/ui/: bound.rs  channels.rs  conversion.rs  mod.rs  types.rs
crates/execution-engine/src/worker/: embedded_script.rs  mod.rs  worker.rs
crates/execution-engine/src/worker/runtime/: mod.rs
crates/execution-engine/src/worker/runtime/python/: command.rs  mod.rs
crates/execution-engine/src/worker/runtime/shell/: command.rs  mod.rs
crates/station-protocol/: Cargo.toml  README.md
crates/station-protocol/src/: export.rs  lib.rs
crates/tofupilot-sdk/: Cargo.toml  README.md
crates/tofupilot-sdk/docs/models/: batchgetcreatedbystation.md  batchgetcreatedbyuser.md  batchlistcreatedbystation.md  batchlistcreatedbyuser.md  deploymentgetbranch.md  deploymentgetbuildlogs.md  deploymentgetcommit.md  deploymentgetcreatedbyuser.md  deploymentgetdeploymentmode.md  deploymentgetprocedure.md  deploymentgetrepository.md  deploymentgetrequest.md  deploymentgetresponse.md  deploymentgetstations.md  deploymentgetstatus.md  deploymentlistcommit.md  deploymentlistdata.md  deploymentlistmeta.md  deploymentlistprocedure.md  deploymentlistrepository.md  deploymentlistrequest.md  deploymentlistresponse.md  deploymentliststations.md  environment.md  importstructuredimporter.md  importstructureditems.md  importstructuredrequest.md  importstructuredresponse.md  importstructuredresults.md  importtabularbatchnumber1.md  importtabularbatchnumber2.md  importtabularcolumns.md  importtabulardocstring1.md  importtabulardocstring2.md  importtabularendedat1.md  (+175 more)
crates/tofupilot-sdk/src/: attachments.rs  batches.rs  client.rs  config.rs  deployments.rs  imports.rs  lib.rs  logs.rs  measurements.rs  parts.rs  phases.rs  procedures.rs  revisions.rs  runs.rs  stations.rs  types.rs  units.rs  upload.rs  users.rs  versions.rs
crates/tofupilot-sdk/tests/: attachments.rs  batches.rs  common.rs  custom_ca.rs  parts.rs  procedures.rs  revisions.rs  runs_create.rs  runs_create_aggregations.rs  runs_create_mdm.rs  runs_create_validators.rs  runs_delete.rs  runs_get.rs  runs_list.rs  runs_update.rs  stations.rs  unit_children.rs  units.rs  users.rs  versions.rs
src/: browser_open.rs  display.rs  error.rs  http.rs  log.rs  main.rs  tasks.rs
src/api/: attachments.rs  batches.rs  deployments.rs  imports.rs  logs.rs  measurements.rs  mod.rs  parts.rs  phases.rs  procedures.rs  revisions.rs  runs.rs  stations.rs  units.rs  users.rs  versions.rs
src/commands/: config.rs  db.rs  http.rs  install.rs  mod.rs  service.rs  uninstall.rs  uv_bootstrap.rs
src/commands/auth/: config.rs  credentials.rs  mod.rs
src/commands/deploy/: mod.rs
src/commands/link/: mod.rs
src/commands/pull/: mod.rs  sync.rs
src/commands/run/: bootstrap.rs  cancel.rs  deployment_id.rs  emit.rs  engine.rs  event_router.rs  identify_host.rs  log_source.rs  mod.rs  outcomes.rs  procedure_version.rs  python.rs  queue.rs  run_log.rs  time_fmt.rs  ui_response.rs
src/commands/station/: bridge.rs  client.rs  labwc_touch.rs  mod.rs  pull_stage.rs
src/commands/update/: cache.rs  config.rs  download.rs  mod.rs  platform.rs  version.rs
src/config/: mod.rs  timeouts.rs
src/local_ws/: mod.rs  placeholder.html
tests/agent_protocol/: README.md  audit_protocol.py  ci_smoke.py  drive_all.sh  drive_cli.py  pytest_drive.py  robot_drive.py  stress_test.py  test_protocol.py  yaml_audit.py  yaml_scaffold.sh
tests/agent_protocol/scenarios/: .gitignore
(+222 files in other folders)
