[package]
name = "tofupilot"
version = "0.25.0"
edition = "2021"
rust-version = "1.85"
description = "TofuPilot CLI: run, deploy, and manage test procedures from the terminal."
license = "MIT"
authors = ["TofuPilot <hello@tofupilot.com>"]
repository = "https://github.com/tofupilot/cli"
homepage = "https://tofupilot.com"
readme = "README.md"
keywords = ["tofupilot", "testing", "manufacturing", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "tofupilot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
directories = "6"
tofupilot-sdk = { package = "tofupilot", path = "crates/tofupilot-sdk" }
self-replace = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
zstd = "0.13"
open = "5"
comfy-table = "7"
semver = "1"
redb = "4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
command-group = { version = "5.0", features = ["with-tokio"] }
station-protocol = { path = "crates/station-protocol" }
execution-engine = { path = "crates/execution-engine" }
async-trait = "0.1"
thiserror = "2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
centrifuge-client = { version = "0.1.0-alpha.1", default-features = false, features = ["rustls"] }
ratatui = "0.30"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
sysinfo = "0.32"
mac_address = "1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
include_dir = "0.7"
mime_guess = "2"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Pure-Rust sd_notify(3). Used to ping the systemd watchdog when the
# CLI runs as a `tofupilot.service` user unit with `WatchdogSec` set.
# No-op outside systemd (the helper checks `$NOTIFY_SOCKET` itself).
sd-notify = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
