[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"
description = "Test execution engine that orchestrates phases, plugs, and runtime workers for TofuPilot procedures."
license = "MIT"
authors = ["TofuPilot <hello@tofupilot.com>"]
repository = "https://github.com/tofupilot/cli"
homepage = "https://tofupilot.com"
readme = "README.md"
keywords = ["tofupilot", "testing", "manufacturing", "orchestration", "runtime"]
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_trim = "1.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "6"
regex = "1"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "process", "time", "io-util", "macros", "net"] }
once_cell = "1"
validator = { version = "0.20", features = ["derive"] }
base64 = "0.22"
sysinfo = "0.36"
futures = "0.3"
async-trait = "0.1"
command-group = { version = "5.0", features = ["with-tokio"] }
portpicker = "0.1"
mime_guess = "2.0"
num_cpus = "1.16"
nix = { version = "0.30", features = ["signal"] }
pathdiff = "0.2"
sha2 = "0.10"
specta = { version = "2.0.0-rc.22", features = ["chrono", "uuid"], optional = true }
station-protocol = { path = "../station-protocol" }

[features]
default = []
specta = ["dep:specta"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
