[package]
name = "station-protocol"
version = "0.1.0"
edition = "2021"
description = "Shared real-time protocol types for TofuPilot CLI, execution engine, and dashboard."
license = "MIT"
authors = ["TofuPilot <hello@tofupilot.com>"]
repository = "https://github.com/tofupilot/cli"
homepage = "https://tofupilot.com"
readme = "README.md"
keywords = ["tofupilot", "protocol", "testing", "manufacturing"]
categories = ["development-tools::testing", "encoding"]
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=1.0.5", features = ["serde", "typescript", "export"] }

[[bin]]
name = "export-types"
path = "src/export.rs"
